--- a/app/view/pc/styles/my_space.scss
+++ b/app/view/pc/styles/my_space.scss
@@ -233,6 +233,72 @@ $t-hover-color: #ee534e;
 
                         font-size: 15px;
 
+                        .form-left {
+                            width: 50%;
+                        }
+
+                        .form-right {
+                            width: 50%;
+                        }
+
+                        .upload-form {
+                            margin: 20px 0 0 300px;
+                        }
+
+                        .upload-info{
+                            margin-top: 5px;
+                            padding-bottom: 10px;
+    
+                            background-color: #fff;
+    
+                            .info-title {
+                                padding-left: 40px;
+                                width: 100%;
+                                height: 50px;
+    
+                                font-size: 15px;
+                                line-height: 50px;
+    
+                                border-bottom: 1px solid #c9cdcf;
+                            }
+    
+                            .layui-upload-drag {
+                                top: 50%;
+                                margin: 50px 0 30px 50px;
+    
+                                .icon {
+                                    font-size: 100px;
+                                }
+                            }
+    
+                            .layui-upload-list {
+                                margin: 50px 0 30px 50px;
+    
+                                .layui-upload-img {
+                                    height: 200px;
+                                    width: auto;
+                                }
+                            }
+    
+                            .production-error {
+                                margin: 5px 0 0 30px;
+                                width: 150px;
+                            }
+    
+                            .layui-form {
+                                margin-top: 20px;
+                                padding-left: 20px;
+        
+                                width: 800px;
+        
+                                .layui-form-item {
+                                    .layui-form-label {
+                                        width: 100px;
+                                    }
+                                }
+                            }
+                        }
+
                         .layui-form-label {
                             margin-right: 15px;
 
@@ -241,6 +307,7 @@ $t-hover-color: #ee534e;
                         
                         .layui-input-block {
                             margin-left: 150px;
+                            width: 300px;
 
                             color: $gray-color;
 
