--- a/app/view/pc/styles/activity_detail.scss
+++ b/app/view/pc/styles/activity_detail.scss
@@ -23,6 +23,7 @@ $t-hover-color: #ee534e;
             
             margin-left: 30px;
             height: 300px;
+            width: 650px;
     
             .t-title {
                 margin-bottom: 20px;
