--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -958,7 +958,6 @@ div.dis-ib {
     margin: 0 3.663vw 2.1978vw; }
     .best-certified-architect .activity-list .list-item {
       position: relative;
-      display: block;
       margin-bottom: 3.663vw;
       height: 38.09524vw;
       width: 24.17582vw;
@@ -1022,7 +1021,7 @@ div.dis-ib {
     .all-certified-architect .activity-list .list-item {
       margin-bottom: 0.7326vw;
       width: 100%;
-      height: 13.91941vw;
+      height: 15.38462vw;
       border-bottom: 1px solid #b8bdc0; }
       .all-certified-architect .activity-list .list-item .content {
         width: 100%;
@@ -1964,7 +1963,8 @@ div.dis-ib {
   .activity-detail-describe .container .describe-text {
     position: relative;
     margin-left: 2.1978vw;
-    height: 21.97802vw; }
+    height: 21.97802vw;
+    width: 47.61905vw; }
     .activity-detail-describe .container .describe-text .t-title {
       margin-bottom: 1.4652vw;
       font-size: 1.4652vw;
