--- a/app/view/pc/styles/activity_rule.scss
+++ b/app/view/pc/styles/activity_rule.scss
@@ -5,3 +5,15 @@
     height: 500px;
 }
 
+.content-div {
+    padding: 100px 100px;
+}
+
+.activity-detail-content {
+    padding: 20px 0;
+}
+
+.activity-detail-rule {
+    padding: 20px 0;
+}
+
