--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -2278,7 +2278,7 @@ div.dis-ib {
   height: 36.63004vw; }
 
 .content-div {
-  padding: 7.32601vw 7.32601vw; }
+  padding: 7.32601vw; }
 
 .activity-detail-content {
   padding: 1.4652vw 0; }
