--- a/app/view/pc/styles/production_detail.scss
+++ b/app/view/pc/styles/production_detail.scss
@@ -71,6 +71,8 @@ $t-hover-color: #ee534e;
                 margin-left: 30px;
 
                 .author-name{
+                    display: block;
+
                     font-size: 25px;
                     line-height: 40px;
                 }
@@ -95,7 +97,7 @@ $t-hover-color: #ee534e;
                         background-color: $main-color;
                     }
     
-                    .detail-btn {
+                    .collection-btn {
                         margin-left: 10px;
                         width: 80px;
                         height: 35px;
