<U>关注活动处理

--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -1993,6 +1993,13 @@ div.dis-ib {
         line-height: 3.663vw;
         text-align: center;
         background-color: #888b8d; }
+      .activity-detail-describe .container .describe-text .btn-list .attention-btn {
+        margin-left: 2.1978vw;
+        width: 10.98901vw;
+        height: 3.663vw;
+        line-height: 3.663vw;
+        text-align: center;
+        background-color: #e61717; }
 
 .activity-production-list {
   margin-top: 1.4652vw;
