--- a/app/view/pc/styles/activity_detail.scss
+++ b/app/view/pc/styles/activity_detail.scss
@@ -73,6 +73,17 @@ $t-hover-color: #ee534e;
 
                     background-color: $gray-color;
                 }
+
+                .attention-btn {
+                    margin-left: 30px;
+                    width: 150px;
+                    height: 50px;
+
+                    line-height: 50px;
+                    text-align: center;
+
+                    background-color: #e61717;
+                }
             }
         }
     }
