--- a/app/view/pc/styles/my_space.scss
+++ b/app/view/pc/styles/my_space.scss
@@ -793,6 +793,32 @@ $t-hover-color: #ee534e;
                     }
                 }
             }
+
+            .news {
+                .news-list {
+                    .list-item {
+                        position: relative;
+                        width: 300px;
+                        height: 350px;
+
+                        .item-img {
+                            width: 300px;
+                            height: 350px;
+
+                            background-size: cover;
+                            background-position: center center;
+                        }
+
+                        .status-icon {
+                            position: absolute;
+                            bottom: 5px;
+                            right: 5px;
+
+                            font-size: 100px;
+                        }
+                    }
+                }
+            }
         }
     }
 }
