--- a/app/view/pc/styles/my_space.scss
+++ b/app/view/pc/styles/my_space.scss
@@ -117,6 +117,41 @@ $t-hover-color: #ee534e;
                         border-radius: 5px;
 
                         overflow: hidden;
+
+                        .opration-list {
+                            position: absolute;
+                            top: 10px;
+
+                            width: 100%;
+
+                            pointer-events: auto;
+
+                            .delete-production {
+                                margin-left: 5px;
+                                width: 60px;
+                                height: 30px;
+
+                                line-height: 30px;
+                                font-size: 18px;
+
+                                cursor: pointer;
+
+                                background-color: rgb(224, 49, 49);
+                            }
+
+                            .edit-production {
+                                margin-right: 5px;
+                                width: 60px;
+                                height: 30px;
+
+                                line-height: 30px;
+                                font-size: 18px;
+
+                                cursor: pointer;
+
+                                background-color: rgb(32, 173, 32);
+                            }
+                        }
         
                         .list-img-div {
                             position: relative;
