--- a/app/view/pc/styles/my_space.scss
+++ b/app/view/pc/styles/my_space.scss
@@ -93,7 +93,7 @@ $t-hover-color: #ee534e;
 
         .layui-tab-title {
             margin: 0 auto;
-            width: 450px;
+            width: 550px;
         }
 
         .layui-tab-content {
@@ -851,6 +851,166 @@ $t-hover-color: #ee534e;
 
                             font-size: 100px;
                         }
+                    }
+                }
+            }
+
+            .my-publish {
+                .publish-show {
+                    margin: 0 auto;
+                    width: 1044px;
+                    
+                    .list-item {
+                        position: relative;
+        
+                        display: block;
+        
+                        margin: 0 10px 30px 0;
+                        width: 250px;
+        
+                        border-radius: 5px;
+
+                        overflow: hidden;
+
+                        .opration-list {
+                            position: absolute;
+                            top: 10px;
+
+                            width: 100%;
+
+                            pointer-events: auto;
+
+                            .delete-activity {
+                                margin-left: 5px;
+                                width: 60px;
+                                height: 30px;
+
+                                line-height: 30px;
+                                font-size: 18px;
+
+                                cursor: pointer;
+
+                                background-color: rgb(224, 49, 49);
+                            }
+
+                            .edit-activity {
+                                margin-right: 5px;
+                                width: 60px;
+                                height: 30px;
+
+                                line-height: 30px;
+                                font-size: 18px;
+
+                                cursor: pointer;
+
+                                background-color: rgb(32, 173, 32);
+                            }
+                        }
+        
+                        .list-img-div {
+                            position: relative;
+        
+                            width: 250px;
+                            height: 210px;
+        
+                            overflow: hidden;
+        
+                            cursor: pointer;
+        
+                            .item-img {
+                                width: 250px;
+                                height: 210px;
+            
+                                border-radius: 5px 5px 0 0;
+            
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                            }
+        
+                            .item-cover {
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                right: 0;
+                                bottom: 0;
+        
+                                border-radius: 5px;
+        
+                                background-color: rgba(102, 102, 102, 0.44);;
+                            
+                                opacity: 0;
+                            }
+                        }
+        
+                        .list-img-div:hover {
+                            .item-img {
+                                transform: rotate(0deg) scale(1.2) translate(0%,0%);
+        
+                                transition: All 8s ease;
+                            }
+        
+                            .item-cover {
+                                opacity: 1;
+        
+                                transition: All 1s ease;
+                            }
+                        }
+        
+                        .item-text {
+                            padding: 10px;
+
+                            background-color: #fff;
+
+                            font-size: 13px;
+                            
+                            .t-title {
+                                color: $black-color;
+
+                                line-height: 30px;
+
+                                .icon {
+                                    font-size: 20px;
+                                }
+                            }
+        
+                            .t-title:hover {
+                                color: $t-hover-color;
+                            }
+        
+                            .t-describe {
+                                color: $gray-color;
+
+                            }
+
+                            .about-production {
+                                margin-top: 10px;
+                                width: 200px;
+
+                                color: $gray-color;
+
+                                font-size: 13px;
+
+                                .icon {
+                                    font-size: 18px;
+                                }
+                            }
+
+                            .product-create-time {
+                                margin-right: 10px;
+                                
+                                line-height: 30px;
+
+                                color: $gray-color;
+                            }
+                        }
+                    }
+        
+                    .list-item:hover {
+                        box-shadow:  0px 17px 50px 0px rgba(0,0,0,0.188235);
+                        
+                        transform: translate3d(0px,-2px,0px);
+                        transition: all 0.3s ease;
                     }
                 }
             }
