--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -831,68 +831,70 @@ div.dis-ib {
       background-size: cover; }
 
 .activity-ing {
-  margin-top: 2.1978vw;
-  background-color: #ebebeb; }
+  margin-top: 2.1978vw; }
   .activity-ing .activity-list {
     margin: 0 3.663vw 2.1978vw; }
-    .activity-ing .activity-list .list-item {
-      position: relative;
-      display: block;
-      margin-bottom: 3.663vw;
-      height: 32.96703vw;
-      width: 38.09524vw;
-      border-radius: 0.3663vw; }
-      .activity-ing .activity-list .list-item .list-img-div {
+    .activity-ing .activity-list .join_d {
+      width: 100%;
+      margin-top: 1.4652vw; }
+      .activity-ing .activity-list .join_d li {
+        float: left;
         position: relative;
+        margin-bottom: 1.4652vw;
         width: 38.09524vw;
-        height: 20.51282vw;
-        overflow: hidden;
-        cursor: pointer; }
-        .activity-ing .activity-list .list-item .list-img-div .item-img {
-          width: 38.09524vw;
-          height: 20.51282vw;
-          border-radius: 0.3663vw 0.3663vw 0 0;
-          background-position: center center;
+        height: 25.64103vw;
+        overflow: hidden; }
+        .activity-ing .activity-list .join_d li .tu {
+          width: 100%;
+          height: 100%;
+          background-size: cover;
           background-repeat: no-repeat;
-          background-size: cover; }
-        .activity-ing .activity-list .list-item .list-img-div .item-cover {
+          background-position: center center;
+          vertical-align: top; }
+        .activity-ing .activity-list .join_d li .wen {
+          width: 100%;
+          height: 100%;
           position: absolute;
-          top: 0;
           left: 0;
-          right: 0;
-          bottom: 0;
-          border-radius: 0.3663vw;
-          background-color: rgba(102, 102, 102, 0.44);
-          opacity: 0; }
-      .activity-ing .activity-list .list-item .list-img-div:hover .item-img {
-        -webkit-transform: rotate(0deg) scale(1.2) translate(0%, 0%);
-            -ms-transform: rotate(0deg) scale(1.2) translate(0%, 0%);
-                transform: rotate(0deg) scale(1.2) translate(0%, 0%);
-        transition: All 8s ease; }
-      .activity-ing .activity-list .list-item .list-img-div:hover .item-cover {
-        opacity: 1;
-        transition: All 1s ease; }
-      .activity-ing .activity-list .list-item .item-text {
-        margin-top: 0.7326vw;
-        padding: 0.7326vw; }
-        .activity-ing .activity-list .list-item .item-text .t-title {
-          color: #101213; }
-        .activity-ing .activity-list .list-item .item-text .t-title:hover {
-          color: #ee534e; }
-        .activity-ing .activity-list .list-item .item-text .t-describe {
-          margin-top: 1.0989vw;
-          color: #5e6468; }
-        .activity-ing .activity-list .list-item .item-text .t-type {
-          position: absolute;
-          bottom: 0.7326vw;
-          color: #101213; }
-          .activity-ing .activity-list .list-item .item-text .t-type .icon {
-            font-size: 2.1978vw; }
-    .activity-ing .activity-list .list-item:hover {
-      box-shadow: 0px 1.24542vw 3.663vw 0px rgba(0, 0, 0, 0.188235);
-      -webkit-transform: translate3d(0px, -0.14652vw, 0px);
-              transform: translate3d(0px, -0.14652vw, 0px);
-      transition: all 0.3s ease; }
+          top: 19.78022vw;
+          z-index: 99;
+          transition: 0.7s;
+          -moz-transition: 0.7s;
+          -webkit-transition: 0.7s;
+          -o-transition: 0.7s;
+          background: url(/public/images/bg_a.png) repeat;
+          color: #FFF; }
+          .activity-ing .activity-list .join_d li .wen .about-activity {
+            margin-top: 2.1978vw;
+            width: 14.65201vw;
+            color: #FFF;
+            font-size: 1.24542vw; }
+            .activity-ing .activity-list .join_d li .wen .about-activity .icon {
+              font-size: 1.53846vw; }
+          .activity-ing .activity-list .join_d li .wen .title {
+            padding-left: 1.4652vw;
+            line-height: 6.59341vw;
+            text-align: left;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            font-size: 1.61172vw;
+            color: #fff; }
+          .activity-ing .activity-list .join_d li .wen .title:hover {
+            color: #f068a9; }
+          .activity-ing .activity-list .join_d li .wen .des {
+            margin: 0px auto;
+            width: 35.53114vw;
+            height: 14.65201vw;
+            padding: 1.8315vw 0;
+            border-top: 1px solid #ddd;
+            border-bottom: 1px solid #ddd;
+            overflow: hidden; }
+            .activity-ing .activity-list .join_d li .wen .des p {
+              font-size: 1.17216vw;
+              line-height: 180%; }
+      .activity-ing .activity-list .join_d li:hover .wen {
+        top: 0; }
 
 .activity-ed {
   margin-top: 2.1978vw; }
