--- a/app/view/pc/styles/activity.scss
+++ b/app/view/pc/styles/activity.scss
@@ -23,108 +23,103 @@ $t-hover-color: #ee534e;
 
 .activity-ing {
     margin-top: 30px;
-    background-color: #ebebeb;
 
     .activity-list {
         margin: $main-padding;
+    
+        .join_d {
+            width: 100%;
+            margin-top: 20px;
 
-        .list-item {
-            position: relative;
-
-            display: block;
-
-            margin-bottom: 50px;
-            height: 450px;
-            width: 520px;
-
-            border-radius: 5px;
-
-            .list-img-div {
+            li {
+                float: left;
                 position: relative;
 
+                margin-bottom: 20px;
                 width: 520px;
-                height: 280px;
+                height: 350px;
 
                 overflow: hidden;
 
-                cursor: pointer;
+                .tu {
+                    width: 100%;
+                    height: 100%;
 
-                .item-img {
-                    width: 520px;
-                    height: 280px;
-
-                    border-radius: 5px 5px 0 0;
-
-                    background-position: center center;
-                    background-repeat: no-repeat;
                     background-size: cover;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+
+                    vertical-align: top;
                 }
 
-                .item-cover {
+                .wen {
+                    width: 100%;
+                    height: 100%;
+
                     position: absolute;
-                    top: 0;
                     left: 0;
-                    right: 0;
-                    bottom: 0;
+                    top: 270px;
 
-                    border-radius: 5px;
+                    z-index: 99;
+                    transition: 0.7s;
+                    -moz-transition: 0.7s;
+                    -webkit-transition: 0.7s;
+                    -o-transition: 0.7s;
+                    
+                    background: url(/public/images/bg_a.png) repeat;
+                    color: #FFF;
 
-                    background-color: rgba(102, 102, 102, 0.44);;
-                
-                    opacity: 0;
-                }
-            }
+                    .about-activity {
+                        margin-top: 30px;
+                        width: 200px;
 
-            .list-img-div:hover {
-                .item-img {
-                    transform: rotate(0deg) scale(1.2) translate(0%,0%);
+                        color: #FFF;
 
-                    transition: All 8s ease;
-                }
+                        font-size: 17px;
 
-                .item-cover {
-                    opacity: 1;
+                        .icon {
+                            font-size: 21px;
+                        }
+                    }
+                    
+                    .title {
+                        padding-left: 20px;
 
-                    transition: All 1s ease;
-                }
-            }
+                        line-height: 90px;
+                        text-align: left;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        font-size: 22px;
 
-            .item-text {
-                margin-top: 10px;
-                padding: 10px;
-                
-                .t-title {
-                    color: $black-color;
-                }
+                        color: #fff;
+                    }
 
-                .t-title:hover {
-                    color: $t-hover-color;
-                }
+                    .title:hover {
+                        color: #f068a9;
+                    }
 
-                .t-describe {
-                    margin-top: 15px;
+                    .des {
+                        margin: 0px auto;
+                        width: 485px;
+                        height: 200px;
 
-                    color: $gray-color;
-                }
+                        padding: 25px 0;
+                        border-top: 1px solid #ddd;
+                        border-bottom: 1px solid #ddd;
+                        overflow: hidden;
 
-                .t-type {
-                    position: absolute;
-                    bottom: 10px;
-
-                    color: $black-color;
-
-                    .icon {
-                        font-size: 30px;
+                        p {
+                            font-size: 16px;
+                            line-height: 180%;
+                        }
                     }
                 }
             }
-        }
 
-        .list-item:hover {
-            box-shadow:  0px 17px 50px 0px rgba(0,0,0,0.188235);
-            
-            transform: translate3d(0px,-2px,0px);
-            transition: all 0.3s ease;
+            li:hover .wen {
+                top: 0;
+            }
         }
     }
 }
