--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -57,7 +57,7 @@ body {
   min-height: 100vh;
   font-family: "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
   color: #333333;
-  background-color: #fff; }
+  background: url(/public/images/bg.jpg) repeat scroll center top #000; }
 
 /* 页面主体内容部分所占的宽度和位置居中 */
 .container {
@@ -373,7 +373,7 @@ div.dis-ib {
   width: 100%;
   height: 7.32601vw;
   font-size: 1.4652vw;
-  background-color: #fff; }
+  background-color: transparent; }
   .header .container {
     position: relative; }
     .header .container .logo-img {
@@ -429,13 +429,15 @@ div.dis-ib {
       position: relative;
       display: block;
       margin-bottom: 3.663vw;
-      height: 38.09524vw;
+      height: 30.76923vw;
       width: 24.17582vw;
-      border-radius: 0.3663vw; }
+      border-radius: 0.3663vw;
+      background-color: #fff;
+      overflow: hidden; }
       .new-activity .container .activity-list .list-item .list-img-div {
         position: relative;
         width: 24.17582vw;
-        height: 24.17582vw;
+        height: 18.31502vw;
         overflow: hidden;
         cursor: pointer; }
         .new-activity .container .activity-list .list-item .list-img-div .item-img {
@@ -454,6 +456,15 @@ div.dis-ib {
           border-radius: 0.3663vw;
           background-color: rgba(102, 102, 102, 0.44);
           opacity: 0; }
+          .new-activity .container .activity-list .list-item .list-img-div .item-cover .look-detail {
+            width: 10.98901vw;
+            height: 10.98901vw;
+            font-size: 1.8315vw;
+            text-align: center;
+            line-height: 10.98901vw;
+            border-radius: 5.49451vw;
+            border: 0.21978vw solid #fff;
+            color: #fff; }
       .new-activity .container .activity-list .list-item .list-img-div:hover .item-img {
         -webkit-transform: rotate(0deg) scale(1.2) translate(0%, 0%);
             -ms-transform: rotate(0deg) scale(1.2) translate(0%, 0%);
@@ -462,6 +473,11 @@ div.dis-ib {
       .new-activity .container .activity-list .list-item .list-img-div:hover .item-cover {
         opacity: 1;
         transition: All 1s ease; }
+        .new-activity .container .activity-list .list-item .list-img-div:hover .item-cover .look-detail {
+          -webkit-transform: rotate(360deg);
+              -ms-transform: rotate(360deg);
+                  transform: rotate(360deg);
+          transition: all .5s ease-in-out; }
       .new-activity .container .activity-list .list-item .item-text {
         margin-top: 0.7326vw;
         padding: 0.7326vw; }
@@ -476,10 +492,24 @@ div.dis-ib {
           position: absolute;
           bottom: 0.7326vw;
           color: #101213; }
-          .new-activity .container .activity-list .list-item .item-text .t-type .icon {
-            font-size: 2.1978vw; }
+          .new-activity .container .activity-list .list-item .item-text .t-type .t-portrait {
+            margin-right: 1.0989vw;
+            width: 2.1978vw;
+            height: 2.1978vw;
+            border-radius: 1.0989vw;
+            border: 1px solid #ccc;
+            background-size: cover;
+            background-position: center center; }
+          .new-activity .container .activity-list .list-item .item-text .t-type span {
+            line-height: 2.1978vw; }
+          .new-activity .container .activity-list .list-item .item-text .t-type .about-activity {
+            margin-left: 2.9304vw;
+            width: 14.65201vw;
+            font-size: 1.0989vw; }
+            .new-activity .container .activity-list .list-item .item-text .t-type .about-activity .icon {
+              font-size: 1.31868vw; }
     .new-activity .container .activity-list .list-item:hover {
-      box-shadow: 0px 1.24542vw 3.663vw 0px rgba(0, 0, 0, 0.188235);
+      box-shadow: 0 0 1.31868vw 0.29304vw #e9b7bf, 0 0 1.31868vw 0.29304vw #e9b7bf;
       -webkit-transform: translate3d(0px, -0.14652vw, 0px);
               transform: translate3d(0px, -0.14652vw, 0px);
       transition: all 0.3s ease; }
@@ -499,14 +529,16 @@ div.dis-ib {
 
 .hot-classify {
   padding: 0 3.663vw 2.1978vw;
-  background-color: #8cc3f0; }
+  background-color: #fff; }
   .hot-classify .classify-list {
     margin: 0 3.663vw 2.1978vw; }
     .hot-classify .classify-list .list-item {
       position: relative;
       display: block;
       margin-bottom: 3.663vw;
-      border-radius: 0.3663vw; }
+      border: 1px solid #dddfe0;
+      border-radius: 0.3663vw;
+      overflow: hidden; }
       .hot-classify .classify-list .list-item .item-text {
         position: absolute;
         bottom: 1.0989vw;
@@ -519,16 +551,16 @@ div.dis-ib {
           padding-left: 2.1978vw;
           line-height: 3.663vw;
           font-size: 1.4652vw;
-          color: #5e6468; }
+          color: #101213; }
       .hot-classify .classify-list .list-item .list-img-div {
         position: relative;
-        width: 24.17582vw;
-        height: 14.65201vw;
+        width: 18.31502vw;
+        height: 18.31502vw;
         overflow: hidden;
         cursor: pointer; }
         .hot-classify .classify-list .list-item .list-img-div .item-img {
-          width: 24.17582vw;
-          height: 14.65201vw;
+          width: 18.31502vw;
+          height: 18.31502vw;
           border-radius: 0.3663vw 0.3663vw 0 0;
           background-position: center center;
           background-repeat: no-repeat;
@@ -551,7 +583,7 @@ div.dis-ib {
         opacity: 1;
         transition: All 1s ease; }
     .hot-classify .classify-list .list-item:hover {
-      box-shadow: 0px 1.24542vw 3.663vw 0px rgba(0, 0, 0, 0.188235);
+      box-shadow: 0 0 1.31868vw 0.29304vw #e9b7bf, 0 0 1.31868vw 0.29304vw #e9b7bf;
       -webkit-transform: translate3d(0px, -0.14652vw, 0px);
               transform: translate3d(0px, -0.14652vw, 0px);
       transition: all 0.3s ease; }
@@ -566,52 +598,80 @@ div.dis-ib {
   background-image: url("/public/images/1.jpeg"); }
   .active-certified-architect .certified-architect-list {
     margin: 0 3.663vw 2.1978vw; }
-    .active-certified-architect .certified-architect-list .list-item {
-      position: relative;
-      display: block;
-      margin-bottom: 3.663vw;
-      width: 24.17582vw;
-      border-radius: 0.3663vw; }
-      .active-certified-architect .certified-architect-list .list-item .list-img-div {
+    .active-certified-architect .certified-architect-list .grid_3 {
+      width: 19.78022vw; }
+      .active-certified-architect .certified-architect-list .grid_3 .grade {
+        padding-bottom: 1.4652vw;
+        text-align: center; }
+      .active-certified-architect .certified-architect-list .grid_3 .circle {
         position: relative;
-        width: 24.17582vw;
-        height: 25.64103vw;
-        overflow: hidden;
-        cursor: pointer; }
-        .active-certified-architect .certified-architect-list .list-item .list-img-div .item-img {
-          margin: 0.7326vw;
-          width: 22.71062vw;
-          height: 25.64103vw;
-          border-radius: 0.3663vw 0.3663vw 0 0;
-          background-position: center center;
-          background-repeat: no-repeat;
-          background-size: cover; }
-      .active-certified-architect .certified-architect-list .list-item .item-text {
-        margin-top: 0.7326vw;
-        padding: 0.7326vw; }
-        .active-certified-architect .certified-architect-list .list-item .item-text .t-title {
-          color: #101213; }
-        .active-certified-architect .certified-architect-list .list-item .item-text .t-title:hover {
-          color: #ee534e; }
-        .active-certified-architect .certified-architect-list .list-item .item-text .t-describe {
-          margin-top: 1.0989vw;
-          color: #5e6468; }
-        .active-certified-architect .certified-architect-list .list-item .item-text .t-type {
+        margin-top: 0.95238vw;
+        transition: all 0.35s ease-in-out; }
+        .active-certified-architect .certified-architect-list .grid_3 .circle .img:before {
           position: absolute;
-          bottom: 0.7326vw;
-          color: #101213; }
-          .active-certified-architect .certified-architect-list .list-item .item-text .t-type .icon {
-            font-size: 2.1978vw; }
-    .active-certified-architect .certified-architect-list .list-item:hover {
-      box-shadow: 0px 1.24542vw 3.663vw 0px rgba(0, 0, 0, 0.188235);
-      -webkit-transform: translate3d(0px, -0.14652vw, 0px);
-              transform: translate3d(0px, -0.14652vw, 0px);
-      transition: all 0.3s ease; }
-    .active-certified-architect .certified-architect-list .item-img-big {
-      width: 100%;
-      height: 21.97802vw;
-      background-position: center;
-      background-size: cover; }
+          display: block;
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+          box-shadow: inset 0 0 0 1.17216vw rgba(255, 255, 255, 0.6);
+          transition: all 0.35s ease-in-out;
+          content: ''; }
+        .active-certified-architect .certified-architect-list .grid_3 .circle .img {
+          position: relative;
+          width: 19.70696vw;
+          height: 19.70696vw;
+          border-radius: 50%;
+          -webkit-transform: scale(1);
+              -ms-transform: scale(1);
+                  transform: scale(1);
+          transition: all 0.35s ease-in-out;
+          opacity: 1; }
+          .active-certified-architect .certified-architect-list .grid_3 .circle .img img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%; }
+        .active-certified-architect .certified-architect-list .grid_3 .circle .info {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          text-align: center;
+          -webkit-backface-visibility: hidden;
+                  backface-visibility: hidden;
+          background: rgba(0, 0, 0, 0.6);
+          color: #fff;
+          opacity: 0;
+          border-radius: 50%;
+          transition: all 0.35s ease-in-out;
+          -webkit-transform: translateX(-100%);
+              -ms-transform: translateX(-100%);
+                  transform: translateX(-100%); }
+          .active-certified-architect .certified-architect-list .grid_3 .circle .info h3 {
+            font-size: 1.61172vw;
+            margin: 0 3.2967vw;
+            border-bottom: 1px solid #fff;
+            padding: 6.81319vw 0 0.80586vw 0; }
+          .active-certified-architect .certified-architect-list .grid_3 .circle .info p {
+            padding: 0.7326vw 0.3663vw;
+            margin: 0 2.9304vw;
+            font-size: 0.87912vw; }
+      .active-certified-architect .certified-architect-list .grid_3 .circle a:hover .img {
+        -webkit-transform: rotate(15deg);
+            -ms-transform: rotate(15deg);
+                transform: rotate(15deg);
+        transition: all .5 ease-in-out; }
+      .active-certified-architect .certified-architect-list .grid_3 .circle a:hover .info {
+        -webkit-transform: translateX(0);
+            -ms-transform: translateX(0);
+                transform: translateX(0);
+        opacity: 1; }
+      .active-certified-architect .certified-architect-list .grid_3 .certified-info {
+        margin-top: 2.9304vw;
+        width: 100%;
+        font-size: 1.0989vw; }
+        .active-certified-architect .certified-architect-list .grid_3 .certified-info .icon {
+          font-size: 1.31868vw; }
 
 .member-good-production {
   padding: 0 3.663vw 2.1978vw; }
@@ -621,23 +681,27 @@ div.dis-ib {
       position: relative;
       display: block;
       margin-bottom: 3.663vw;
-      height: 24.17582vw;
       width: 24.17582vw;
       border-radius: 0.3663vw; }
       .member-good-production .production-list .list-item .list-img-div {
         position: relative;
         width: 24.17582vw;
-        height: 23.44322vw;
         overflow: hidden;
         cursor: pointer; }
         .member-good-production .production-list .list-item .list-img-div .item-img {
           margin: 0.7326vw;
           width: 22.71062vw;
-          height: 25.64103vw;
+          height: 22.71062vw;
           border-radius: 0.3663vw 0.3663vw 0 0;
           background-position: center center;
           background-repeat: no-repeat;
           background-size: cover; }
+      .member-good-production .production-list .list-item .production-info {
+        margin-bottom: 0.7326vw;
+        width: 100%;
+        font-size: 1.0989vw; }
+        .member-good-production .production-list .list-item .production-info .icon {
+          font-size: 1.31868vw; }
       .member-good-production .production-list .list-item .item-text {
         margin-top: 0.7326vw;
         padding: 0.7326vw; }
@@ -885,7 +949,6 @@ div.dis-ib {
           .activity-ing .activity-list .join_d li .wen .des {
             margin: 0px auto;
             width: 35.53114vw;
-            height: 14.65201vw;
             padding: 1.8315vw 0;
             border-top: 1px solid #ddd;
             border-bottom: 1px solid #ddd;
