<U>活动页面ui更换

--- a/app/view/pc/styles/activity.scss
+++ b/app/view/pc/styles/activity.scss
@@ -130,76 +130,72 @@ $t-hover-color: #ee534e;
     .activity-list {
         margin: $main-padding;
 
-        .list-item {
-            position: relative;
+        
+        .work {
+            margin-bottom: 40px;
+            height: 300px;
 
-            display: block;
-
-            margin-bottom: 50px;
-            height: 330px;
-            width: 330px;
-
-            border-radius: 5px;
-
-            .list-img-div {
+            .work-grid {
                 position: relative;
 
-                width: 330px;
-                height: 320px;
-
-                overflow: hidden;
-
-                cursor: pointer;
-
-                .item-img {
-                    margin: 10px;
-                    width: 310px;
-                    height: 350px;
-
-                    border-radius: 5px 5px 0 0;
-
-                    background-position: center center;
-                    background-repeat: no-repeat;
-                    background-size: cover;
-                }
-            }
-
-            .item-text {
-                margin-top: 10px;
-                padding: 10px;
+                margin-bottom: 20px;
+                height: 100%;
                 
-                .t-title {
-                    color: $black-color;
-                }
 
-                .t-title:hover {
-                    color: $t-hover-color;
-                }
+                background-size: cover;
+                background-position: center center;
+                background-repeat: no-repeat;
 
-                .t-describe {
-                    margin-top: 15px;
+                transition: 0.3s;
 
-                    color: $gray-color;
-                }
+                .inner {
+                    display: table;
 
-                .t-type {
-                    position: absolute;
-                    bottom: 10px;
+                    height: 300px;
+                    width: 300px;
+                    
+                    background: rgba(237, 235, 232, 0.9);
 
-                    color: $black-color;
+                    transition: 0.3s;
+                    opacity: 0;
 
-                    .icon {
-                        font-size: 30px;
+                    .desc {
+                        display: table-cell;
+                        vertical-align: middle;
+                        padding: 40px;
+
+                        h3 {
+                            margin-bottom: 5px;
+                            
+                            font-size: 14px;
+                            letter-spacing: 1px;
+                            text-transform: uppercase;
+                            font-weight: bold;
+                            line-height: 24px;
+
+                            a {
+                                color: #000;
+                            }
+                        }
+
+                        .cat {
+                            font-size: 11px;
+                            letter-spacing: 2px;
+                            text-transform: uppercase;
+                        }
                     }
                 }
             }
         }
 
-        .list-item:hover {
-            box-shadow:  0px 17px 50px 0px rgba(0,0,0,0.188235);
-            
-            transform: translate3d(0px,-2px,0px);
-            transition: all 0.3s ease;
+        .work:hover .inner,
+        .work:focus .inner {
+            opacity: 1;
+        }
+
+        .work:hover .desc h3 a,
+        .work:focus .desc h3 a {
+            color: #cabcab;
         }
     }
 }
