--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -963,48 +963,47 @@ div.dis-ib {
   margin-top: 2.1978vw; }
   .activity-ed .activity-list {
     margin: 0 3.663vw 2.1978vw; }
-    .activity-ed .activity-list .list-item {
-      position: relative;
-      display: block;
-      margin-bottom: 3.663vw;
-      height: 24.17582vw;
-      width: 24.17582vw;
-      border-radius: 0.3663vw; }
-      .activity-ed .activity-list .list-item .list-img-div {
+    .activity-ed .activity-list .work {
+      margin-bottom: 2.9304vw;
+      height: 21.97802vw; }
+      .activity-ed .activity-list .work .work-grid {
         position: relative;
-        width: 24.17582vw;
-        height: 23.44322vw;
-        overflow: hidden;
-        cursor: pointer; }
-        .activity-ed .activity-list .list-item .list-img-div .item-img {
-          margin: 0.7326vw;
-          width: 22.71062vw;
-          height: 25.64103vw;
-          border-radius: 0.3663vw 0.3663vw 0 0;
-          background-position: center center;
-          background-repeat: no-repeat;
-          background-size: cover; }
-      .activity-ed .activity-list .list-item .item-text {
-        margin-top: 0.7326vw;
-        padding: 0.7326vw; }
-        .activity-ed .activity-list .list-item .item-text .t-title {
-          color: #101213; }
-        .activity-ed .activity-list .list-item .item-text .t-title:hover {
-          color: #ee534e; }
-        .activity-ed .activity-list .list-item .item-text .t-describe {
-          margin-top: 1.0989vw;
-          color: #5e6468; }
-        .activity-ed .activity-list .list-item .item-text .t-type {
-          position: absolute;
-          bottom: 0.7326vw;
-          color: #101213; }
-          .activity-ed .activity-list .list-item .item-text .t-type .icon {
-            font-size: 2.1978vw; }
-    .activity-ed .activity-list .list-item:hover {
-      box-shadow: 0px 1.24542vw 3.663vw 0px rgba(0, 0, 0, 0.188235);
-      -webkit-transform: translate3d(0px, -0.14652vw, 0px);
-              transform: translate3d(0px, -0.14652vw, 0px);
-      transition: all 0.3s ease; }
+        margin-bottom: 1.4652vw;
+        height: 100%;
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        transition: 0.3s; }
+        .activity-ed .activity-list .work .work-grid .inner {
+          display: table;
+          height: 21.97802vw;
+          width: 21.97802vw;
+          background: rgba(237, 235, 232, 0.9);
+          transition: 0.3s;
+          opacity: 0; }
+          .activity-ed .activity-list .work .work-grid .inner .desc {
+            display: table-cell;
+            vertical-align: middle;
+            padding: 2.9304vw; }
+            .activity-ed .activity-list .work .work-grid .inner .desc h3 {
+              margin-bottom: 0.3663vw;
+              font-size: 1.02564vw;
+              letter-spacing: 1px;
+              text-transform: uppercase;
+              font-weight: bold;
+              line-height: 1.75824vw; }
+              .activity-ed .activity-list .work .work-grid .inner .desc h3 a {
+                color: #000; }
+            .activity-ed .activity-list .work .work-grid .inner .desc .cat {
+              font-size: 0.80586vw;
+              letter-spacing: 0.14652vw;
+              text-transform: uppercase; }
+    .activity-ed .activity-list .work:hover .inner,
+    .activity-ed .activity-list .work:focus .inner {
+      opacity: 1; }
+    .activity-ed .activity-list .work:hover .desc h3 a,
+    .activity-ed .activity-list .work:focus .desc h3 a {
+      color: #cabcab; }
 
 .publish-activity-btn {
   display: block;
